--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ header {
   margin-bottom: 16px;
 }
 
-nav {
+/* nav {
   /* background-color: #EF7D19; */
-}
+
 
 ul {
   display: flex;
@@ -70,9 +70,9 @@ h3{
 
 
 
-section{
+/* section{
   /* display: flex; */
-}
+ 
 
 /* .div2{
   background-image: url(img/bg_laranja.jpg);
